// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Checkbox matches the snapshot 1`] = `
<div
  className="yoast-field-group yoast-field-group__checkbox"
>
  <input
    checked={false}
    id="test-id"
    onChange={[Function]}
    type="checkbox"
  />
  <label
    htmlFor="test-id"
  >
    test label
  </label>
</div>
`;

exports[`Checkbox matches the snapshot when an array is provided as a label 1`] = `
<div
  className="yoast-field-group yoast-field-group__checkbox"
>
  <input
    checked={false}
    id="test-id"
    onChange={[Function]}
    type="checkbox"
  />
  <label
    htmlFor="test-id"
  >
    test label 
    using arrays
  </label>
</div>
`;
